<?xml version="1.0"?>
<package format="2">
  <name>gl_ros_driver</name>
  <version>0.0.1</version>
  <description>The gl_ros_driver package</description>

  <maintainer email="msd2@soslab.co">SOSLAB Co., Ltd.</maintainer>

  <license>BSD</license>

  <url type="website">http://soslab.co</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
